fix: fix some issues e.g. with registry mirror and http proxy handling / no proxy

--- a/charts/mondoo-operator/templates/mondoooperatorconfig.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig.yaml
@@ -25,6 +25,10 @@ spec:
   {{- if .Values.operator.imageRegistry }}
   imageRegistry: {{ .Values.operator.imageRegistry | quote }}
   {{- end }}
+  {{- if .Values.operator.registryMirrors }}
+  registryMirrors:
+  {{- toYaml .Values.operator.registryMirrors | nindent 4 }}
+  {{- end }}
   {{- if .Values.operator.skipContainerResolution }}
   skipContainerResolution: {{ .Values.operator.skipContainerResolution }}
   {{- end }}
