✨ Pin GitHub actions to hashes
Related to: https://github.com/mondoohq/cnquery/pull/5947

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -38,7 +38,7 @@ jobs:
         run: make docker-save
       - name: Generate manifests
         run: make manifests generate generate-manifests
-      - uses: actions/upload-artifact@v6
+      - uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
         with:
           name: operator-build
           path: |
@@ -83,7 +83,7 @@ jobs:
         with:
           go-version: "${{ env.golang-version }}"
 
-      - uses: actions/download-artifact@v7
+      - uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         name: Download operator build artifact
         with:
           name: operator-build
