--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Setup Copywrite
         uses: hashicorp/setup-copywrite@32638da2d4e81d56a0764aa1547882fc4d209636 # v1.1.3
+        with:
+          version: v0.24.0
 
       - name: Check Header Compliance
         run: copywrite headers --plan
