fix(ci): skip image scan for arm/arm64 builds
The Mondoo scanner runs on amd64 and cannot scan arm/arm64 images.
Skip the scan step for non-amd64 architectures - images are still
built and pushed, just not security scanned in CI.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -136,6 +136,7 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
 
       - name: Scan Image
+        if: matrix.arch == 'amd64'
         uses: mondoohq/actions/docker-image@main
         env:
           MONDOO_CONFIG_BASE64: ${{ secrets.MONDOO_CLIENT }}
